# service-oriented-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  requirements.txt  setup.cfg  setup.py  whitelist.txt
.github/workflows/: main-branch.yaml  main-build-and-publish.yml  other-branch.yaml  other-check-quality-and-tests.yml  release.yaml
.meta/coverage/: report.txt
service_oriented/: __init__.py  deployment_environment.py
service_oriented/application/: __init__.py  abstract_composition_root.py  base_application.py  entry_point_spec.py  generic_application.py  generic_main.py
service_oriented/application/config/: __init__.py  base_config.py  yaml_config_settings_source.py
service_oriented/containers/: __init__.py  logging_config_resource.py
service_oriented/dependency_injection/: container_protocol.py
service_oriented/initializers/: logging_initializer.py
service_oriented/logging/: __init__.py  normalized_json_formatter.py
service_oriented/services/logger_service/: __init__.py  abstract_logger_service.py  logger_service.py  logger_service_with_yaml_logging_config.py
service_oriented_test/: deployment_environment_test.py
service_oriented_test/application/: abstract_composition_root_test.py  base_application_test.py  entry_point_spec_test.py  generic_application_test.py  generic_main_test.py
service_oriented_test/application/config/: base_config_test.py  yaml_config_settings_source_test.py
service_oriented_test/containers/: logging_config_resource_test.py
service_oriented_test/example_application/: main.py
service_oriented_test/example_application/app/: application.py  config.py
service_oriented_test/example_application/app/entry_points/: api.py  printer.py
service_oriented_test/example_application_test/: factories.py
service_oriented_test/example_application_test/app/: application_test.py  config_test.py  main_test.py
service_oriented_test/example_application_test/app/entry_points/: printer_test.py
service_oriented_test/fixtures/: __init__.py  logging_config.yaml
service_oriented_test/initializers/: logging_initializer_test.py
service_oriented_test/logging/: normalized_json_formatter_test.py
service_oriented_test/services/logger_service/: logger_service_test.py  logger_service_with_yaml_logging_config_test.py
service_oriented_test/test_helpers/: __init__.py  fixtures.py
service_oriented_test/test_helpers/fixtures/: __init__.py
